--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.2",
+    "@tanstack/query-async-storage-persister": "^5.90.13",
+    "@tanstack/react-query": "^5.90.11",
+    "@tanstack/react-query-persist-client": "^5.90.13",
     "axios": "^1.13.2",
     "expo": "~54.0.22",
     "expo-constants": "~18.0.10",
@@ -25,6 +29,7 @@
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.14",
     "expo-splash-screen": "~31.0.10",
+    "expo-sqlite": "^16.0.9",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
